# pylon-track

./: .gitignore  CMakeLists.txt  README.md  calibration.py  display.cpp  ferret_tracker.cpp  main.cpp
config/: arena_experiment.json
include/: camera_calib.h  camera_config.h  camera_settings.h  ferret_tracker.h  logger.h
include/camera/: camera_calib.h  camera_config.h  camera_settings.h
include/experiment/: arena_config.h  session_recorder.h  trial_state.h
include/labjack/: labjack_dac.h
include/motor/: odrive.h
include/tracker/: display.h  ferret_tracker.h  tracker.h
include/vision/: camera_frame.h  tracking_frame.h  tracking_pipeline.h
src/: calibration.py  camera_calib.cpp  camera_config.cpp  camera_config.json  display.cpp  ferret_tracker.cpp  logger.cpp  main.cpp  tracker.cpp
src/camera/: calibration.py  camera_calib.cpp  camera_config.cpp  camera_config.json
src/experiment/: arena_config.cpp  session_recorder.cpp  trial_state.cpp
src/labjack/: labjack_dac.cpp
src/log/: logger.cpp
src/motor/: odrive.cpp
src/tracker/: display.cpp  ferret_tracker.cpp  tracker.cpp
src/vision/: camera_frame.cpp  tracking_frame.cpp  tracking_pipeline.cpp
tests/: CMakeLists.txt  README.md  latency_suite.cpp  mount_height_suite.cpp  one_time_settings.json  one_time_suite.cpp  param_sweep.cpp  resolution_sweep.cpp  telemetry_suite.cpp
tests/common/: camera_sweep.cpp  camera_sweep.h  image_metrics.cpp  image_metrics.h  measurement_run.cpp  measurement_run.h  telemetry_run.cpp  telemetry_run.h  test_session.cpp  test_session.h
tests/sweep_configs/: binning_sweep.json  black_level_sweep.json  exposure_extended_sweep.json  exposure_sweep.json  frame_rate_enable_sweep.json  frame_rate_sweep.json  gain_sweep.json  gamma_sweep.json  offset_x_sweep.json  offset_y_sweep.json  resolution_sweep.json  scaling_sweep.json  throughput_sweep.json  ultra_short_exposure_sweep.json
web_ui/: index.html  server.py
